--- a/frontend/app/Styles/Navbar.css
+++ b/frontend/app/Styles/Navbar.css
@@ -10,31 +10,31 @@
   --primary-light: #FFE0B2;
   --secondary-cool: #00695C;
   --secondary-bold: #3949AB;
-  
+
   /* Text Colors */
   --text-primary: #212121;
   --text-secondary: #616161;
   --text-on-dark: #FFFFFF;
-  
+
   /* Background Colors */
   --background-main: #fafafa;
   --background-section: #f5f5f5;
   --background-accent: #ffe0b2;
-  
+
   /* Spacing */
   --spacing-xs: 0.5rem;
   --spacing-sm: 1rem;
   --spacing-md: 1.5rem;
   --spacing-lg: 2rem;
   --spacing-xl: 3rem;
-  
+
   /* Shadows */
- 
+
   /* Transitions */
   --transition-fast: 0.2s ease;
   --transition-normal: 0.3s ease;
   --transition-slow: 0.5s ease;
-  
+
   /* Border Radius */
   --radius-sm: 4px;
   --radius-md: 8px;
@@ -122,7 +122,23 @@ body {
   color: var(--primary);
   background-color: rgba(0, 49, 83, 0.1);
 }
+.account-btn {
+  font-size: 1rem;
+  font-weight: bold;
+  color: var(--text-primary);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  border: none;
+  background-color: transparent;
+  padding: 8px 12px;
+  border-radius: 4px;
 
+
+}
+.account-btn:hover{
+  color: var(--primary);
+  background-color: rgba(0, 49, 83, 0.1);
+}
 .menuBtn {
   display: none;
   font-size: 1.8rem;
@@ -169,7 +185,7 @@ body {
   .navbar {
     padding: 10px 15px;
   }
-  
+
   .menuBtn {
     display: block;
   }
@@ -244,7 +260,7 @@ body {
     height: 80px;
     margin-bottom: 10px;
   }
-  
+
   .username {
     display: block;
     font-size: 1.1rem;
